# epigraphhub_py

./: .containers-sugar.yaml  .coveragerc  .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  .sugar.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  debug_col.csv  pyproject.toml  requirements.txt  temp (2).tif  test_scripts.ipynb
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  dependabot-auto-merge.yml  dependabot-combine-prs.yml  pr-title-checker.yaml  release.yaml
Examples/: worldbank.ipynb
conda/: dev.yaml
docker/: .env.tpl  README.md  compose.yaml  healthcheck.sh
docker/postgresql/: Dockerfile
docker/postgresql/sql/dev/: 01-database.sql  02-extensions.sql  03-epigraphhub.sql  04-privatehub.sql
docs/source/: conf.py  index.rst  overview.md  trends.ipynb
docs/tutorials/analysis/: tutorial_epistats.ipynb  tutorial_ngboost_models.ipynb  tutorial_preprocessing.ipynb
docs/tutorials/analysis/data/: data_to_get_clusters.csv  data_to_inf.csv
docs/tutorials/analysis/saved_models/: hosp_GE_1.joblib  hosp_GE_10.joblib  hosp_GE_11.joblib  hosp_GE_12.joblib  hosp_GE_13.joblib  hosp_GE_14.joblib  hosp_GE_2.joblib  hosp_GE_3.joblib  hosp_GE_4.joblib  hosp_GE_5.joblib  hosp_GE_6.joblib  hosp_GE_7.joblib  hosp_GE_8.joblib  hosp_GE_9.joblib
docs/tutorials/data/: epigraphhub_db.ipynb  foph.ipynb  trends.ipynb  worldbank.ipynb  worldpop.ipynb
docs/tutorials/forecast_switzerland/: config.py  forecast_models.ipynb  forecast_models.py  forecast_swiss.py  train_models.ipynb  train_models.py  verify_train.ipynb
docs/tutorials/forecast_switzerland/article/: download_data.ipynb  result_article_forecast.ipynb  results_article_train_eval.ipynb
docs/tutorials/forecast_switzerland/article/data_article/: data_BE.csv  data_GE.csv
docs/tutorials/forecast_switzerland/article/metrics/: for_metrics_hosp_BE.csv  for_metrics_hosp_GE.csv  for_metrics_hosp_ZH.csv  val_hosp_BE.csv  val_hosp_GE.csv  val_hosp_ZH.csv
docs/tutorials/forecast_switzerland/article/saved_models/: ngboost_hosp_BE_10D.joblib  ngboost_hosp_BE_11D.joblib  (+40 more)
epigraphhub/: __init__.py  __main__.py  connection.py  settings.py
epigraphhub/Examples/: Training the models.ipynb  doc_world_bank.html  doc_world_bank.md  forecast_models.ipynb
epigraphhub/Examples/.ipynb_checkpoints/: Training the models-checkpoint.ipynb  Untitled-checkpoint.ipynb  forecast_models-checkpoint.ipynb  train_eval_the_models-checkpoint.ipynb
epigraphhub/analysis/: clustering.py  epistats.py  preprocessing.py  py_epitools.py  rtestim.py
epigraphhub/analysis/forecast_models/: lstm_models.py  metrics.py  ngboost_models.py  plots.py  sklearn_models.py
epigraphhub/data/: .env  _config.py  epigraphhub.py  epigraphhub_db.py  foph.py  geoupload.py  get_data.py  ggtrends.py  preprocessing.py  sinan_fetch.py  upload.py  worldbank.py  worldpop.py
epigraphhub/data/brasil/sinan/: __init__.py  extract.py  loading.py  viz.py
epigraphhub/data/colombia/: extract.py  loading.py
epigraphhub/data/data_collection/: config.py
epigraphhub/data/data_collection/colombia/: compare_data.py  data_chunk.py  load_chunks_into_db.py
epigraphhub/data/data_collection/foph/: compare_data.py  download_data.py  load_into_db.py  update_index.py
epigraphhub/data/data_collection/owid/: compare_data.py  download_data.py  load_into_db.py  update_index.py
epigraphhub/data/foph/: extract.py  loading.py  schema.json  transform.py  viz.py
epigraphhub/data/gpkg/: load.py
epigraphhub/data/owid/: extract.py  loading.py  transform.py
epigraphhub/data/regions/: colombia.py
epigraphhub/models/: forecast_swiss.py  lstm_models.py  ngboost_models.py  plots.py  sklearn_models.py
epigraphhub/utils/: _config.py
epigraphhub_py/: __main__.py  connection.py
epigraphhub_py/epigraphhub/data/: upload.py
examples/: lstm_models.ipynb  ngboost_models.ipynb  sklearn_models.ipynb  worldbank.ipynb  worldpop.ipynb
examples/forecast_switzerland/: Training the models.ipynb  eval_all_cantons_hosp.csv  eval_all_cantons_icu_patients.csv  eval_all_cantons_total_hosp.csv  forecast_models.ipynb  result_article_forecast.ipynb  results_article_train_eval.ipynb  train_eval_the_models.ipynb
scripts/ci/: pr-title-linter.sh
scripts/dev/: create-config-file.sh
tests/: conftest.py  test_connection.py
tests/data_for_test/: data_test.csv  df_cases.csv  ngboost_hosp_GE_1D.joblib  ngboost_hosp_GE_2D.joblib
tests/saved_models_for_test/: train_ngb_1.joblib  train_ngb_2.joblib
tests/test_analysis/: test_clustering.py  test_epistats.py  test_ngboost_models.py  test_preprocessing.py  test_py_epitools.py
tests/test_analysys/: test_clustering.py  test_epistats.py
tests/test_data/: test_foph.py  test_geoupload.py  test_ggtrends.py  test_preprocessing.py  test_sinan_fetch.py  test_upload.py  test_worldbank.py  test_worldpop.py
tests/test_datacollection/: test_foph.py  test_owid.py
tests/test_example/: test_hello.py
tests/test_models/: test_lstm_models.py  test_ngboost_models.py  test_sklearn_models.py
(+29 files in other folders)
